More user-friendly node density control and dialog update.